--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>NYT Article Search</title>
+
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
