Create Main and children component

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,14 @@
 	<meta charset="UTF-8">
 	<title>NYT Article Search</title>
 
+	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 	
-	<!-- This is where React will deploy the contents it generates -->
 	<div id="app"></div>
 
-	<!-- All of our JS code will be transpiled into this bundle.js file -->
 	<script src="bundle.js"></script>
 	
 </body>
