Add logo, github link to header

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
